<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.sophie.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        >

        <TextView
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/english"
            style="@style/heading"
            android:background="@drawable/mybg_e"
            android:onClick="openEnglQuiz"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/knowledge"
            android:background="@drawable/mybg_gk"
            style="@style/heading"
            android:onClick="openGeKnQuiz"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/psychology"
            style="@style/heading"
            android:background="@drawable/mybg_p"
            android:onClick="openPsyQuiz"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/aboutSophie"
            style="@style/heading"
            android:background="@drawable/mybg_s"
            android:onClick="openAbSoQuiz"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>